tests/fuse/full/concurrency/shared_no_rank.fuse
// EXPECTED ERROR:
// error: Shared<T> requires @rank annotation
//   --> shared_no_rank.fuse:7:3

@entrypoint
fn main() {
  val cache: Shared<Int> = Shared::<Int>.new()
  println("ok")
}
